# UnmaskedResponder

./: Example_Constructing_Responses.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
resp_tabs/: drm_theta_0.0_phi_0.0_.fits  drm_theta_177.0_phi_45.0_.fits
src/nitrates_response/: __init__.py  config.py
src/nitrates_response/lib/: __init__.py  coord_conv_funcs.py  drm_funcs.py  hp_funcs.py  trans_func.py
src/nitrates_response/response/: Polygons.py  StructClasses.py  StructFunc.py  __init__.py  ray_trace_funcs.py  shield_structure.py
src/nitrates_response/tools/: __init__.py  source_model_response.py
tests/: nitrates_total_resp.npy  rate_dpis_NR.npy  src_tab.fits  test_response.py
