[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nitrates_response"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Package for all NITRATES material related to responses."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
